Fixed wrong z-index in the header

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -15,7 +15,7 @@
         text-align: center;
         column-gap: 12px;
         font-size: 16px;
-        z-index: 1;
+        z-index: 100;
         position: fixed;
         top: 0;
         width: calc(100vw - 37px);
